--- a/roles/agent/handlers/main.yml
+++ b/roles/agent/handlers/main.yml
@@ -1,25 +1,25 @@
 ---
 - name: restart all go services
-  shell: ls -1 /etc/default/go-agent?* /etc/default/go-server
+  shell: "ls -1 /etc/default/go-agent?* /etc/default/go-server"
   register: go_services
   notify:
      - restart go service
      - ensure go-server running
 
 - name: restart all agents
-  shell: ls -1 /etc/default/go-agent?*
+  shell: "ls -1 /etc/default/go-agent?*"
   register: go_services
   notify:
      - restart go service
 
 - name: restart go service
-  shell: /etc/init.d/{{ item | basename }} restart
+  shell: "/etc/init.d/{{ item | basename }} restart"
   with_items: go_services.stdout_lines
   sudo: yes
 
 - name: restart go-server
   sudo: yes
-  shell: /etc/init.d/go-server restart
+  shell: "/etc/init.d/go-server restart"
   notify:
      - ensure go-server running
 
@@ -28,4 +28,4 @@
 
 - name: restart firewalld
   sudo: yes
-  system: name=firewalld state=restarted
+  service: name=firewalld state=restarted
