--- a/roles/server/handlers/main.yml
+++ b/roles/server/handlers/main.yml
@@ -1,24 +1,24 @@
 ---
 - name: restart all go services
-  shell: ls -1 /etc/default/go-agent?* /etc/default/go-server
+  shell: "ls -1 /etc/default/go-agent?* /etc/default/go-server"
   register: go_services
   notify:
      - restart go service
      - ensure go-server running
 
 - name: restart all agents
-  shell: ls -1 /etc/default/go-agent?*
+  shell: "ls -1 /etc/default/go-agent?*"
   register: go_services
   notify:
      - restart go service
 
 - name: restart go service
-  shell: /etc/init.d/{{ item | basename }} restart
+  shell: "/etc/init.d/{{ item | basename }} restart"
   with_items: go_services.stdout_lines
 
 - name: restart go-server
   sudo: yes
-  shell: /etc/init.d/go-server restart
+  shell: "/etc/init.d/go-server restart"
   notify:
      - ensure go-server running
 
