--- a/roles/server/handlers/main.yml
+++ b/roles/server/handlers/main.yml
@@ -1,20 +1,8 @@
 ---
-- name: restart all go services
-  shell: "ls -1 /etc/default/go-agent?* /etc/default/go-server"
-  register: go_services
-  notify:
-     - restart go service
-     - ensure go-server running
-
 - name: restart all agents
-  shell: "ls -1 /etc/default/go-agent?*"
-  register: go_services
-  notify:
-     - restart go service
-
-- name: restart go service
-  shell: "/etc/init.d/{{ item | basename }} restart"
-  with_items: go_services.stdout_lines
+  command: "{{item}} restart"
+  with_fileglob:
+   - /etc/init.d/go-agent?*
 
 - name: restart go-server
   sudo: yes
